# comandind

./: .claude  .eslintrc.cjs  .gitignore  .gitmodules  AI_VALIDATION_REPORT_PHASE6.md  CLAUDE.md  COMPLETE_FIX_VALIDATION.md  DEPLOYMENT_SUCCESS_REPORT.md  Dockerfile  Dockerfile.simple  EXTRACTION_SUCCESS.md  INPUT_DETECTION_IMPROVEMENTS.md  MEMORY_LEAK_FIXES_SUMMARY.md  NAVIGATION_FIXES_SUMMARY.md  OLLAMA_CONNECTION_TEST.md  OLLAMA_INTEGRATION_SPECIFICATIONS.md  PATHFINDING_TEST.md  PHASE6_EVIDENCE_BASED_VALIDATION_REPORT.md  PRODUCTION_DEPLOYMENT_CERTIFICATION.md  PRODUCTION_VALIDATION_REPORT.md  README.md  SECURITY_VALIDATION_REPORT.md  SELECTION_SYSTEM_TEST.md  SPRITES_CONVERTED_SUCCESS.md  SPRITE_EXTRACTION_GUIDE.md  TEST_SUITE_SUMMARY.md  TRACKPAD_CONTROLS.md  WEBGL_ANALYSIS_COMPLETE.md  ai-validation-evidence-2025-08-19T23-47-07.json  ai-validation-test.html  debug_test.html  demo-map-generation.html  diagnostic.html  docker-compose.simple.yml  index.html  input-detection-test.html  jest.config.json  minimal-pixi-test.html  monitoring-simple.html  package-lock.json  (+19 more)
UnifiedWorkflow/: .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run.sh
UnifiedWorkflow/.claude/: AGENT_REGISTRY.md  COMPREHENSIVE_AGENT_INTEGRATION_PROTOCOL.md  DATABASE_PERFORMANCE_OPTIMIZATION_REPORT.md  RECURSION_FIX_SUMMARY.md  WORKFLOW_FIXES_SUMMARY.md  WORKFLOW_LOGGING_INTEGRATION_GUIDE.md  agent_integration_report_iteration4.md  auth_monitoring_implementation_summary.md  auth_performance_optimization_complete.md  auth_performance_validation_20250818_195627.json  automated-recovery-system.py  database_performance_analysis_20250818_133033.json  database_performance_analysis_docker_20250818_133244.json  database_performance_analysis_docker_20250818_133508.json  database_performance_optimizer_docker.py  database_quick_performance_check.py  infrastructure_stability_report.md  intelligent_cache.py  orchestration_knowledge_graph_update.json  orchestration_learning_report_20250814.md  orchestration_state.py  orchestration_todo_manager.py  orchestration_todos.json  orchestrator_instructions.md  performance_validation_report_20250818.md  phase2_infrastructure_strategy.json  phase2_strategic_output_iteration8.md  phase4_database_context_package.md  phase4_performance_context_package.md  private_route_performance_analyzer.py  production_validation_report.md  security_validation_results_auth_loop_20250818_195329.json  test_fixed_workflow.py  test_knowledge_graph_integration.py  unified-orchestration-config.yaml  validate-improvements.sh  webui_loop_investigation_complete.md
UnifiedWorkflow/agents/: agent-integration-orchestrator.md  graphics-specialist.md  ml-game-ai-specialist.md  ollama-integration-specialist.md  security-vulnerability-scanner.md  smart-search-agent.md  ui-regression-debugger.md
UnifiedWorkflow/alembic/: alembic.ini  env.py  script.py.mako
UnifiedWorkflow/app/: CHAT_API_422_FIX_SUMMARY.md  __init__.py  alembic.ini  check_test_accounts.py  (+19 more)
(+2846 files in other folders)
