[project]
name = "ai-workflow-engine"
version = "0.1.0"
description = "AI Workflow Engine Backend"
authors = [{name = "Marku", email = "markuszvirbulis@gmail.com"}]
readme = "README.md"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiofiles = "^23.2.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"} # Updated
sqlalchemy = "^2.0.31" # Updated
alembic = "^1.13.1"
psycopg2-binary = "^2.9.10" # For sync database connections
celery = "^5.4.0"
redis = "^5.0.7" # Updated

# LangChain stack - updates are highly recommended
langchain = "^0.3.0"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.55"

# Modern authentication dependencies - Argon2 only
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pyjwt = "^2.10.1"
cryptography = "^45.0.6"  # For enhanced JWT service encryption

python-multipart = "^0.0.20"
qdrant-client = "^1.9.2" # Updated
ollama = "^0.3.0"
pydantic-settings = "^2.3.4" # Updated
slowapi = "^0.1.9"

# Google Auth stack
google-auth = "^2.32.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.149.0"

# General utilities
python-dateutil = "^2.9.0" # Updated
pytz = "^2024.1" # Timezone handling for datetime operations
tiktoken = "^0.9.0"
aiohttp = "^3.9.5"
httpx = "^0.27.0"
requests = "^2.32.3"
tavily-python = "^0.3.3"
beautifulsoup4 = "^4.12.3"
jsonschema = "^4.21.0"  # JSON schema validation for API contracts

# Additional dependencies for worker services and monitoring
asyncpg = "^0.29.0"          # Async PostgreSQL driver
prometheus_client = "^0.20.0" # Prometheus metrics collection
psutil = "^6.0.0"            # System and process monitoring

# Two-Factor Authentication (2FA) dependencies
pyotp = "^2.9.0"           # TOTP implementation for Google Authenticator
qrcode = {extras = ["pil"], version = "^7.4.2"}  # QR code generation with PIL support
user-agents = "^2.2.0"     # User agent parsing for device fingerprinting
webauthn = "^2.0.0"        # WebAuthn/FIDO2 for passkey authentication

# Desktop Client Dependencies
PyQt6 = "^6.7.0"
mss = "^9.0.1"
pynput = "^1.7.6"
pyautogui = "^0.9.54"

[tool.poetry.group.dev.dependencies]
# Testing Framework
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
pytest-mock = "^3.11.1"
pytest-html = "^3.2.0"
pytest-benchmark = "^4.0.0"
pytest-timeout = "^2.1.0"

# Test Containers and Mocking
testcontainers = "^3.7.1"
factory-boy = "^3.3.0"
faker = "^19.6.2"
responses = "^0.23.3"
aioresponses = "^0.7.4"

# API Testing  
httpx = "^0.27.0"
requests-mock = "^1.11.0"

# Performance Testing
locust = "^2.16.1"

# Security Testing
bandit = "^1.7.5"
safety = "^2.3.5"

# Code Quality
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.1"
coverage = "^7.3.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"